--- a/Pages/Translate/Translate.cshtml
+++ b/Pages/Translate/Translate.cshtml
@@ -6,39 +6,45 @@
 
 <h1>Translate</h1>
 
-<form method="post">
-  <label for="selectedSourceLanguage">Source language:</label>
-  <select id="selectedSourceLanguage" name="selectedSourceLanguage">
-    @foreach (var key in Model.ViewModel.LanguageMap.Keys)
-    {
-      if (key == Model.ViewModel.State.SelectedSourceLanguage)
+<form class="form" method="post">
+  <div>
+    <label for="selectedSourceLanguage">Source language:</label>
+    <select id="selectedSourceLanguage" name="selectedSourceLanguage">
+      @foreach (var key in Model.ViewModel.LanguageMap.Keys)
       {
-        <option value="@key" selected>@key</option>
+        if (key == Model.ViewModel.State.SelectedSourceLanguage)
+        {
+          <option value="@key" selected>@key</option>
+        }
+        else
+        {
+          <option value="@key">@key</option>
+        }
       }
-      else
-      {
-        <option value="@key">@key</option>
-      }
-    }
-  </select>
+    </select>
+  </div>
 
-  <label for="target-languages">Target language:</label>
-  <select id="target-languages" name="selectedTargetLanguage">
-    @foreach (var key in Model.ViewModel.LanguageMap.Keys)
-    {
-      if (key == Model.ViewModel.State.SelectedTargetLanguage)
+  <div>
+    <label for="target-languages">Target language:</label>
+    <select id="target-languages" name="selectedTargetLanguage">
+      @foreach (var key in Model.ViewModel.LanguageMap.Keys)
       {
-        <option value="@key" selected>@key</option>
+        if (key == Model.ViewModel.State.SelectedTargetLanguage)
+        {
+          <option value="@key" selected>@key</option>
+        }
+        else
+        {
+          <option value="@key">@key</option>
+        }
       }
-      else
-      {
-        <option value="@key">@key</option>
-      }
-    }
-  </select>
+    </select>
+  </div>
 
-  <label for="text">Original Text:</label>
-  <textarea type="text" id="text" name="text" required>@Model.ViewModel.State.InputText</textarea>
+  <div class="input-text">
+    <label for="text">Original Text:</label>
+    <textarea type="text" id="text" name="text" required>@Model.ViewModel.State.InputText</textarea>
+  </div>
 
   <button type="submit">Translate</button>
 </form>
@@ -49,3 +55,18 @@
 {
   <p><strong>Translated Text:</strong> @Model.ViewModel.State.TranslatedText</p>
 }
+
+<style>
+  label {
+    margin-right: 5px;
+  }
+
+  .form {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .input-text {
+    display: flex;
+  }
+</style>
